Correct cancellation + correct invoice selection(when not yet printed)